# wb_parser

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  log.py
app/export/: __init__.py  xlsx.py
app/http/: __init__.py  client.py
app/models/: __init__.py  row.py
app/pipeline/: __init__.py  filters.py  merge.py  run.py
app/wb/: __init__.py  endpoints.py  images.py  parsers.py
artifacts/: catalog_filtered.xlsx  catalog_full.xlsx
